new font - content

--- a/index.html
+++ b/index.html
@@ -5,9 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <title>Reservia</title>
 </head>
 <body>
-    
+    <header>
+        <div id="header" class="container">
+            <div id="logo" class="container"><img src="images/logo/Reservia.svg" alt="logo reservia">
+            </div>
+            <div class="nav">
+                <a href="">Hébergements</a>
+                <a href="">Activités</a>
+                <a href="">S'inscrire</a>
+            </div>
+        </div>
+    </header> <br>
+    <div>
+        Trouvez votre hébergement pour des vacances de rêve <br>
+        En plein centre ville ou en pleine nature <br>
+        <input type="search" name="" id="">
+    </div><br>
+    <div>
+        Filtres
+        <button><i class="fas fa-money-bill-wave"> Economique</i></button>
+        <button><i class="fas fa-child"> Familial</i></button>
+        <button><i class="fas fa-heart"> Romantique</i></button>
+        <button><i class="fas fa-dog"> Animaux autorisés</i></button>
+    </div> <br>
+    <div>
+        <i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette villes
+    </div><br>
+
+    <footer>
+        <div>
+            <div>
+                <h4>A propos</h4>
+                <a href="">Fonctionnement du site</a> <br>
+                <a href="">Condition générales de vente</a> <br>
+                <a href="">Données et confidentialité</a> <br>
+            </div>
+            <div>
+                <h4>Nos Hébergements</h4>
+                <a href="">Charte qualité</a> <br>
+                <a href="">Soumettre votre hôtel</a><br>
+            </div>
+            <div>
+                <h4>Assistance</h4>
+                <a href="">Centre d'aide</a>
+                <a href="">Nous contacter</a>
+            </div>
+        </div>
+    </footer>
 </body>
+<script src="https://kit.fontawesome.com/431707d5aa.js" crossorigin="anonymous"></script>
 </html>
