--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     </header> <br>
     <div>
-        Trouvez votre hébergement pour des vacances de rêve <br>
+       <p>Trouvez votre hébergement pour des vacances de rêve </p> <br>
         En plein centre ville ou en pleine nature <br>
         <input type="search" name="" id="">
     </div><br>
