--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div id="header" class="container">
             <div id="logo" class="container"><img src="images/logo/Reservia.svg" alt="logo reservia">
             </div>
-            <div class="nav">
+            <nav>
                 <a href="#hebergement">Hébergements</a>
                 <a href="#activite">Activités</a>
                 <a href="">S'inscrire</a>
-            </div>
+            </nav>
         </div>
     </header> <br>
 
