--- a/index.html
+++ b/index.html
@@ -44,13 +44,20 @@
     
 <!--Section hébergement et populaire-->    
     <div id="hebergement">
-        <div>
-            <h3>Hébergement à Marseille</h3>
-        </div>
+        <!--Populaires-->
         <div>
             <div>
                 <h3>Les plus populaires</h3>
                 <i class="fas fa-chart-line"></i>
+            </div>
+        </div>
+
+        <div>
+            <h3>Hébergement à Marseille</h3> <br>
+
+            <!--Hôtels-->
+            <div>
+                
             </div>
         </div>
     </div>
