--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
     <div>
        <p>Trouvez votre hébergement pour des vacances de rêve </p> <br>
         En plein centre ville ou en pleine nature <br>
-        <i class="fas fa-map-marker-alt"> <input type="search" name="" id=""></i>
+        <i class="fas fa-map-marker-alt"></i> <input type="search" name="" id="">
+        <input type="submit" value="Rechercher">
     </div><br>
     
 <!-- Filtres-->    
     <div>
         Filtres
-        <button><i class="fas fa-money-bill-wave"> Economique</i></button>
-        <button><i class="fas fa-child"> Familial</i></button>
-        <button><i class="fas fa-heart"> Romantique</i></button>
-        <button><i class="fas fa-dog"> Animaux autorisés</i></button>
+        <i class="fas fa-money-bill-wave"></i><button> Economique</button>
+        <i class="fas fa-child"></i> <button>Familial</button>
+        <i class="fas fa-heart"></i><button> Romantique</button>
+        <i class="fas fa-dog"></i><button> Animaux autorisés</button>
     </div> <br>
     
 <!-- Information-->
