nouveau css ( incomplet )

--- a/index.html
+++ b/index.html
@@ -53,13 +53,18 @@
             </div>
         </div>
 
-        <div>
-            <h3>Hébergement à Marseille</h3> <br>
+        <div class="hotel">
+            <h3>Hébergement à Marseille</h3>
 
-            <!--Hôtels-->
-            <div>
-                
-            </div>
+
+                <div class="capsule">
+                    <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+                    <div class="container">
+                        <p><bold>Auberge la Cannebière</bold></p>
+                        <p>A partir de <bold>25€</bold></p>
+                    </div>
+                </div>
+
         </div>
     </div>
 
