new css and index

--- a/index.html
+++ b/index.html
@@ -46,17 +46,154 @@
     </div><br>
     
 <!--Section hébergement et populaire-->    
-    <div id="hebergement">
+    <div id="hebergement" class="flex-container">
         <!--Populaires-->
-        <div>
-            <div>
+        <div id="populaire" class="flex-container">
+            <div id="pop" class="flex-container">
                 <h3>Les plus populaires</h3>
                 <i class="fas fa-chart-line"></i>
             </div>
+            <div class="capsule">
+                <a href="">
+                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="">
+                    <div class="description">
+                        <bold>Hôtel le soleil du matin</bold> <br>
+                        Nuit à partir de <bold>128€</bold><br>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </span>
+                    </div>
+                </a>
+            </div>
+            <div class="capsule">
+                <a href="">
+                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="">
+                    <div class="description">
+                        <bold>Au coeur de l'eau Chambre d'hôte</bold> <br>
+                        Nuit à partir de <bold>71€</bold><br>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </span>
+                    </div>
+                </a>    
+            </div>
+            <div class="capsule">
+                <a href="">
+                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="">
+                    <div class="description">
+                        <bold>Hôtel tout bleu et blanc</bold> <br>
+                        Nuit à partir de <bold>68€</bold><br>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </span>
+                    </div>
+                </a>
+            </div>
         </div>
 
-        <div class="hotel">
+        <div id="hotel" class="flex-container">
+            <div>
             <h3>Hébergement à Marseille</h3>
+            </div>
+            <div class="capsule">
+                <a href="">
+                    <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+                    <div class="description">
+                        <bold>Auberge la Cannebière</bold> <br>
+                        Nuit à partir de <bold>25€</bold><br>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </span>
+                    </div>
+                </a>
+            </div>
+            <div class="capsule">
+                <a href="">
+                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
+                    <div class="description">
+                        <bold>Hôtel du port</bold> <br>
+                        Nuit à partir de <bold>52€</bold><br>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </span>
+                    </div>
+                </a>
+            </div>
+            <div class="capsule">
+                <a href="">
+                    <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
+                    <div class="description">
+                        <bold>Hôtel les mouettes</bold> <br>
+                        Nuit à partir de <bold>76€</bold><br>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </span>
+                    </div>
+                </a>
+            </div>
+            <div class="capsule">
+                <a href="">
+                    <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
+                    <div class="description">
+                        <bold>Hôtel de la mer</bold> <br>
+                        Nuit à partir de <bold>46€</bold><br>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </span>
+                    </div>
+                </a>
+            </div>
+            <div class="capsule">
+                <a href="">
+                    <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
+                    <div class="description">
+                        <bold>Auberge le Panier</bold> <br>
+                        Nuit à partir de <bold>23€</bold><br>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </span>
+                    </div>
+                </a>
+            </div>
+            <div class="capsule">
+                <a href="">
+                    <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <div class="description">
+                        <bold>Hôtel chez Amina</bold> <br>
+                        Nuit à partir de <bold>96€</bold><br>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </span>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 
@@ -82,7 +219,7 @@
             </div>
             <div>
                 <h4>Assistance</h4>
-                <a href="">Centre d'aide</a>
+                <a href="">Centre d'aide</a><br>
                 <a href="">Nous contacter</a>
             </div>
         </div>
