--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
     <title>Reservia</title>
 </head>
 <body>
-    <main>
 <!-- Header-->
     <header>
         <div id="header" class="flex-container">
-            <div id="logo" class="container">
+            <div id="logo" class="flex-container">
                 <img src="images/logo/Reservia.svg" alt="logo reservia">
+                <a id="inscription" href="#">S'inscrire</a>
             </div>
             <nav>
                 <a href="#hebergement">Hébergements</a>
                 <a href="#activite">Activités</a>
-                <a id="inscription" href="">S'inscrire</a>
             </nav>
         </div>
     </header> <br>
@@ -44,8 +43,7 @@
     
 <!-- Information-->
     <div>
-        <i class="fas fa-info"></i>
-        <p>Plus de 500 logements sont disponibles dans cette villes</p>
+        <i class="fas fa-info"></i><p>Plus de 500 logements sont disponibles dans cette villes</p> 
     </div><br>
     
 <!--Section hébergement et populaire-->    
@@ -58,10 +56,10 @@
             </div>
             <div class="capsule">
                 <a href="#">
-                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="">
+                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du main">
                     <div class="description">
-                        <bold>Hôtel le soleil du matin</bold> <br>
-                        Nuit à partir de <bold>128€</bold><br>
+                        <b>Hôtel le soleil du matin</b> <br>
+                        Nuit à partir de <b>128€</b><br>
                         <span><i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -73,10 +71,10 @@
             </div>
             <div class="capsule">
                 <a href="#">
-                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="">
+                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambre d'hôte">
                     <section class="description">
-                        <bold>Au coeur de l'eau Chambre d'hôte</bold> <br>
-                        Nuit à partir de <bold>71€</bold><br>
+                        <b>Au coeur de l'eau Chambre d'hôte</b> <br>
+                        Nuit à partir de <b>71€</b><br>
                         <span><i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -88,10 +86,10 @@
             </div>
             <div class="capsule">
                 <a href="#">
-                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="">
+                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc">
                     <div class="description">
-                        <bold>Hôtel tout bleu et blanc</bold> <br>
-                        Nuit à partir de <bold>68€</bold><br>
+                        <b>Hôtel tout bleu et blanc</b> <br>
+                        Nuit à partir de <b>68€</b><br>
                         <span><i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -103,100 +101,103 @@
             </div>
         </div>
 
-        <div id="hotel" class="flex-container">
+        <div>
             <div>
             <h3>Hébergement à Marseille</h3>
             </div>
-            <div class="capsule">
-                <a href="#">
-                    <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-                    <div class="description">
-                        <bold>Auberge la Cannebière</bold> <br>
-                        Nuit à partir de <bold>25€</bold><br>
-                        <span><i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                        </span>
-                    </div>
-                </a>
-            </div>
-            <div class="capsule">
-                <a href="#">
-                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
-                    <div class="description">
-                        <bold>Hôtel du port</bold> <br>
-                        Nuit à partir de <bold>52€</bold><br>
-                        <span><i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </span>
-                    </div>
-                </a>
-            </div>
-            <div class="capsule">
-                <a href="#">
-                    <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
-                    <div class="description">
-                        <bold>Hôtel les mouettes</bold> <br>
-                        Nuit à partir de <bold>76€</bold><br>
-                        <span><i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                        </span>
-                    </div>
-                </a>
-            </div>
-            <div class="capsule">
-                <a href="#">
-                    <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
-                    <div class="description">
-                        <bold>Hôtel de la mer</bold> <br>
-                        Nuit à partir de <bold>46€</bold><br>
-                        <span><i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                            <i class="far fa-star"></i>
-                        </span>
-                    </div>
-                </a>
-            </div>
-            <div class="capsule">
-                <a href="#">
-                    <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
-                    <div class="description">
-                        <bold>Auberge le Panier</bold> <br>
-                        Nuit à partir de <bold>23€</bold><br>
-                        <span><i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                        </span>
-                    </div>
-                </a>
-            </div>
-            <div class="capsule">
-                <a href="#">
-                    <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
-                    <div class="description">
-                        <bold>Hôtel chez Amina</bold> <br>
-                        Nuit à partir de <bold>96€</bold><br>
-                        <span><i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </span>
-                    </div>
-                </a>
-            </div>
+            <div id="hotel" class="flex-container">
+                <div class="capsule">
+                    <a href="#">
+                        <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière">
+                        <div class="description">
+                            <b>Auberge la Cannebière</b> <br>
+                            Nuit à partir de <b>25€</b><br>
+                            <span><i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </span>
+                        </div>
+                    </a>
+                </div>
+                <div class="capsule">
+                    <a href="#">
+                        <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
+                        <div class="description">
+                            <b>Hôtel du port</b> <br>
+                            Nuit à partir de <b>52€</b><br>
+                            <span><i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </span>
+                        </div>
+                    </a>
+                </div>
+                <div class="capsule">
+                    <a href="#">
+                        <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes">
+                        <div class="description">
+                            <b>Hôtel les mouettes</b> <br>
+                            Nuit à partir de <b>76€</b><br>
+                            <span><i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </span>
+                        </div>
+                    </a>
+                </div>
+                <div class="capsule">
+                    <a href="#">
+                        <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+                        <div class="description">
+                            <b>Hôtel de la mer</b> <br>
+                            Nuit à partir de <b>46€</b><br>
+                            <span><i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </span>
+                        </div>
+                    </a>
+                </div>
+                <div class="capsule">
+                    <a href="#">
+                        <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier">
+                        <div class="description">
+                            <b>Auberge le Panier</b> <br>
+                            Nuit à partir de <b>23€</b><br>
+                            <span><i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </span>
+                        </div>
+                    </a>
+                </div>
+                <div class="capsule">
+                    <a href="#">
+                        <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
+                        <div class="description">
+                            <b>Hôtel chez Amina</b> <br>
+                            Nuit à partir de <b>96€</b><br>
+                            <span><i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </span>
+                        </div>
+                    </a>
+                </div>
+            </div> <br>
+            <a href="#"><b>Afficher plus</b></a>
         </div>
     </div>
 
