--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
 </head>
 <body>
 <!-- Header-->
-    <header>
-        <div id="header" class="flex-container">
+    <header id="header" class="flex-container">
             <div id="logo" class="flex-container">
                 <img src="images/logo/Reservia.svg" alt="logo reservia">
-                <a id="inscription" href="#">S'inscrire</a>
             </div>
             <nav>
                 <a href="#hebergement">Hébergements</a>
                 <a href="#activite">Activités</a>
             </nav>
-        </div>
+            <div><a id="inscription" href="#">S'inscrire</a></div>
     </header> <br>
 
 <!--Présentation et Recherche-->
@@ -29,7 +27,7 @@
        <p>Trouvez votre hébergement pour des vacances de rêve </p>
         <p>En plein centre ville ou en pleine nature</p>
         <i class="fas fa-map-marker-alt"></i> <input type="search" name="rechercher" id="search">
-        <input type="submit" value="submit">
+        <input type="submit" value="Rechercher">
     </section><br>
     
 <!-- Filtres-->    
@@ -197,7 +195,7 @@
                     </a>
                 </div>
             </div> 
-            <div>
+                <div>
                 <a href="#"><b>Afficher plus</b></a>
                 </div>
         </div>
