--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
     <title>Reservia</title>
 </head>
 <body>
-    <div>
-
+    <div class="page">
+        <header>
+            <nav>
+                <div class="logo"><img src="images/logo/Reservia.svg" alt="logo Reservia"></div>
+                <div class="hebergement"><a href="#">Hébergements</a></div>
+                <div class="activite"><a href="#">Activités</a></div>
+                <div class="inscription"><a href="#">S'inscrire</a></div>
+            </nav>
+        </header>
+        <section>
+            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+            <span>En plein centre ville ou en pleine nature</span>
+        </section>
     </div>
     <footer>
 
