Debut nouveau filtres

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         <div class="recherche">
             <label class="map"><i class="fas fa-map-marker-alt"></i></label>
             <div class="searchBar"><input type="search" name="rechercher" class="barreDeRecherche"></div>
-            <button class="search"><i class="fas fa-search"></i></button>
+            <div class="search"><i class="fas fa-search"><button></button></button></i></div>
         </div>
 
         <!-- Filtres-->    
         <section class="filtre">
             <h2>Filtres</h2>
-            <button><i class="fas fa-money-bill-wave"></i>Economique</button>
-            <button><i class="fas fa-child"></i>Familial</button>
-            <button><i class="fas fa-heart"></i>Romantique</button>
-            <button><i class="fas fa-dog"></i>Animaux autorisés</button>
+            <div class="eco"><button><i class="fas fa-money-bill-wave"></i>Economique</button></div>
+            <div class="famille"><button><i class="fas fa-child"></i>Familial</button></div>
+            <div class="romantique"><button><i class="fas fa-heart"></i>Romantique</button></div>
+            <div class="pet"><button><i class="fas fa-dog"></i>Animaux autorisés</button></div>
         </section> 
 
     </div>
