--- a/index.html
+++ b/index.html
@@ -26,18 +26,46 @@
             <span>En plein centre ville ou en pleine nature</span>
         </section>
         <div class="recherche">
-            <label class="map"><i class="fas fa-map-marker-alt"></i></label>
-            <div class="searchBar"><input type="search" name="rechercher" class="barreDeRecherche"></div>
-            <div class="search"><i class="fas fa-search"><button></button></button></i></div>
+            <label class="map">
+                <i class="fas fa-map-marker-alt"></i>
+            </label>
+            <div class="searchBar">
+                <input type="search" name="rechercher" value="Marseille,France" class="barreDeRecherche">
+            </div>
+            <button class="search">
+                <i class="fas fa-search"></i>
+            </button>
         </div>
 
         <!-- Filtres-->    
-        <section class="filtre">
+        <section>
             <h2>Filtres</h2>
-            <div class="eco"><button><i class="fas fa-money-bill-wave"></i>Economique</button></div>
-            <div class="famille"><button><i class="fas fa-child"></i>Familial</button></div>
-            <div class="romantique"><button><i class="fas fa-heart"></i>Romantique</button></div>
-            <div class="pet"><button><i class="fas fa-dog"></i>Animaux autorisés</button></div>
+            <div  class="filtres">
+                <div class="filtre eco">
+                    <button>
+                        <i class="fas fa-money-bill-wave"></i>
+                        <span>Economique</span>
+                    </button>
+                </div>
+                <div class=" filtre famille">
+                    <button>
+                        <i class="fas fa-child"></i>
+                        <span>Familial</span>
+                    </button>
+                </div>
+                <div class="filtre romantique">
+                    <button>
+                        <i class="fas fa-heart"></i>
+                        <span>Romantique</span>
+                    </button>
+                </div>
+                <div class="filtre pets">
+                    <button type="submit">
+                        <i class="fas fa-dog"></i>
+                        <span>Animaux autorisés</span>
+                    </button>
+                </div>
+            </div>
         </section> 
 
     </div>
