--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="searchBar">
                 <input type="search" name="rechercher" value="Marseille,France" class="barreDeRecherche">
             </div>
-            <button class="search">
+            <button class="search" type="submit">
                 <i class="fas fa-search"></i>
             </button>
         </div>
