--- a/index.html
+++ b/index.html
@@ -66,8 +66,20 @@
                     </button>
                 </div>
             </div>
-        </section> 
+        </section>
+        
+<!--Info-->        
+        <span class="info"><i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette villes</span>
+<!--Hébergements-->
+        <div>
+            <div class="populaires">
+                <div>
+                <h2>Les plus populaires</h2>
+            
+                </div>
+            </div>
 
+        </div>       
     </div>
     <footer>
         <div class="footer">
