--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 <!--Info-->        
         <span class="info"><i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette villes</span>
 <!--Hébergements-->
-        <div>
+        <div id="hebergement" class="hotel">
             <div class="populaires">
-                <div>
-                <h2>Les plus populaires</h2>
-            
+                <div class="hotelPopulaires">
+                    <h2 class="titrePopulaire">Les plus populaires</h2>
+                    <i class="fas fa-chart-line"></i>
                 </div>
             </div>
 
