--- a/index.html
+++ b/index.html
@@ -78,7 +78,59 @@
                     <i class="fas fa-chart-line"></i>
                 </div>
             </div>
-
+            <div>    
+                <div class="cards">
+                    <div class="photo">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel du soleil du matin" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="desc">
+                        <h3>Hôtel Le soleil du matin</h3>
+                        <span>Nuit à partir de 128 <span>€</span></span>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="photo">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="desc">
+                        <h3>Au coeur de l'eau Chambre d'hôtes</h3>
+                        <span>Nuit a partir de 71<span>€</span></span>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="photo">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="desc">
+                        <h3>Hôtel Tout bleu et Blanc</h3>
+                        <span>Nuit à partir de 68 <span class="euro">€</span></span>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </span>
+                    </div>
+                </div>
+            </div>
         </div>       
     </div>
     <footer>
